Bug 372173 - Konsole crashed on startup
Summary: Konsole crashed on startup
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.08.2
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-11-07 10:40 UTC by Łukasz Żarnowiecki
Modified: 2016-11-24 14:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Łukasz Żarnowiecki 2016-11-07 10:40:53 UTC
Application: konsole (16.08.2)

Qt Version: 5.7.0
Frameworks Version: 5.27.0
Operating System: Linux 4.8.6-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

I logged in into plasma using my credentials, konsole crashed immediately when restoring programs from last session.

The crash does not seem to be reproducible.

-- Backtrace:
Application: Konsola (konsole), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f49a2f807c0 (LWP 933))]

Thread 3 (Thread 0x7f4987957700 (LWP 950)):
#0  0x00007f49a293f48d in poll () from /usr/lib/libc.so.6
#1  0x00007f4998c7e786 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f4998c7e89c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f499eed0ddb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f499ee7935a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f499ec958c3 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f499cfdee55 in ?? () from /usr/lib/libQt5DBus.so.5
#7  0x00007f499ec9a5e8 in ?? () from /usr/lib/libQt5Core.so.5
#8  0x00007f499a713454 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f49a29487df in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f498dd1c700 (LWP 945)):
#0  0x00007f49a293f48d in poll () from /usr/lib/libc.so.6
#1  0x00007f499ab388e0 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f499ab3a679 in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f499006f7d9 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f499ec9a5e8 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f499a713454 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f49a29487df in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f49a2f807c0 (LWP 933)):
[KCrash Handler]
#6  0x00007f49a289304f in raise () from /usr/lib/libc.so.6
#7  0x00007f49a289447a in abort () from /usr/lib/libc.so.6
#8  0x00007f499ec80739 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#9  0x00007f499ec7bb1e in qt_assert(char const*, char const*, int) () from /usr/lib/libQt5Core.so.5
#10 0x00007f49a25d7a7c in Konsole::SessionManager::idToSession (this=<optimized out>, id=id@entry=0) at /home/dlh/abs/konsole/src/konsole-16.08.2/src/SessionManager.cpp:318
#11 0x00007f49a25fd780 in Konsole::ViewManager::restoreSessions (this=0x1b0af40, group=...) at /home/dlh/abs/konsole/src/konsole-16.08.2/src/ViewManager.cpp:943
#12 0x00007f49a1e60db8 in KMainWindow::readPropertiesInternal (this=this@entry=0x1a64030, config=0x1a612d0, number=number@entry=1) at /home/dlh/abs/kxmlgui/src/kxmlgui-5.27.0/src/kmainwindow.cpp:648
#13 0x00007f49a1e60e32 in KMainWindow::restore (this=0x1a64030, number=number@entry=1, show=show@entry=true) at /home/dlh/abs/kxmlgui/src/kxmlgui-5.27.0/src/kmainwindow.cpp:473
#14 0x00007f49a2c23c9c in restoreSession (app=...) at /home/dlh/abs/konsole/src/konsole-16.08.2/src/main.cpp:400
#15 0x00007f49a2c27335 in kdemain (argc=<optimized out>, argv=<optimized out>) at /home/dlh/abs/konsole/src/konsole-16.08.2/src/main.cpp:165
#16 0x00007f49a2880291 in __libc_start_main () from /usr/lib/libc.so.6
#17 0x000000000040065a in _start ()

Reported using DrKonqi
Comment 1 Martin Sandsmark 2016-11-20 13:30:49 UTC
Git commit c5ccfc20e8265f92ca73e8714a42f8691d68d2c2 by Martin T. H. Sandsmark.
Committed on 20/11/2016 at 13:29.
Pushed by sandsmark into branch 'master'.

Don't crash/assert on trying to load session with invalid ID

Failing to find a ID should not be a fatal assert, the ViewManager
handles it properly.

M  +2    -3    src/SessionManager.cpp

http://commits.kde.org/konsole/c5ccfc20e8265f92ca73e8714a42f8691d68d2c2
Comment 2 Kurt Hindenburg 2016-11-24 14:47:46 UTC
Git commit 6416009561ce800cde2824bbf369a32687b6fdfe by Kurt Hindenburg, on behalf of Martin T. H. Sandsmark.
Committed on 24/11/2016 at 14:42.
Pushed by hindenburg into branch 'Applications/16.12'.

Don't crash/assert on trying to load session with invalid ID

Failing to find a ID should not be a fatal assert, the ViewManager
handles it properly.
(cherry picked from commit c5ccfc20e8265f92ca73e8714a42f8691d68d2c2)

M  +2    -3    src/SessionManager.cpp

https://commits.kde.org/konsole/6416009561ce800cde2824bbf369a32687b6fdfe