Don't crash/assert on trying to load session with invalid ID

Failing to find a ID should not be a fatal assert, the ViewManager
handles it properly.

BUG: 372173